# hodur

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
.github/workflows/: build_test.yml  pages.yml  run_checks.yml
docs/: CMakeLists.txt
examples/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt  main.cpp
include/hodur/: hodur.h
src/: hodur.cpp
tests/: CMakeLists.txt  test_hodur.cpp
tools/cmake/: Sanitizers.cmake  StageConfig.cmake
tools/cmake/presets/: base.json  checks.json  compilers.json  documentation.json  platforms.json  sanitizer_workflows.json
tools/cmake/toolchains/: asan.toolchain.cmake  clang-cl.toolchain.cmake  clang.toolchain.cmake  gcc.toolchain.cmake  lsan.toolchain.cmake  tsan.toolchain.cmake  ubsan.toolchain.cmake  visual-studio-cl.toolchain.cmake
